crates/dekaf/tests/snapshots/dekaf_integration_test__field_selection_recommended-key-0.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
assertion_line: 435
expression: "&decoded_key"
---
{
  "_flow_key": {
    "p1": "first"
  }
}
