crates/dekaf/tests/snapshots/dekaf_integration_test__field_selection_recommended-value-0.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
assertion_line: 445
expression: "&decoded_payload"
---
{
  "_flow_extra": {},
  "_meta": {
    "_flow_extra": {},
    "flow_truncated": {
      "json": "false"
    }
  },
  "field_a": "foo",
  "field_b": "bar",
  "flow_published_at": {
    "json": "[timestamp]"
  },
  "key": "first"
}
