crates/dekaf/tests/snapshots/dekaf_integration_test__field_selection_specific-value-0.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
assertion_line: 445
expression: "&decoded_payload"
---
{
  "_flow_extra": {},
  "field_a": "foo"
}
