crates/dekaf/tests/snapshots/dekaf_integration_test__fields_not_required-key-0.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
expression: "&decoded_key"
---
{
  "_flow_key": {
    "p1": "first"
  }
}
