crates/dekaf/tests/snapshots/dekaf_integration_test__fields_not_required-value-0.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
expression: "&decoded_payload"
---
{
  "field_a": null,
  "flow_published_at": {
    "json": "[timestamp]"
  },
  "key": "first"
}
