crates/dekaf/tests/snapshots/dekaf_integration_test__meta_is_deleted-value-0.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
assertion_line: 445
expression: "&decoded_payload"
---
{
  "_flow_extra": {},
  "_meta": {
    "_flow_extra": {},
    "is_deleted": 0
  },
  "key": "first"
}
