crates/dekaf/tests/snapshots/dekaf_integration_test__meta_is_deleted-value-1.snap
---
source: crates/dekaf/tests/dekaf_integration_test.rs
expression: "&decoded_payload"
---
{
  "_meta": {
    "is_deleted": 1
  },
  "key": "first"
}
